--- a/React/products-app/package.json
+++ b/React/products-app/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "form-validation",
+  "name": "products-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
-    "start": "next start --turbopack",
-    "lint": "eslint ."
+    "start": "next start",
+    "lint": "eslint"
   },
   "dependencies": {
     "react": "19.1.0",
